# lux-lsp

./: .gitignore  Cargo.toml  LICENSE  NOTICE  README.md  README.zh-CN.md
.github/: lux-ref
.github/workflows/: ci.yml  release.yml
crates/gmod-api-db/: Cargo.toml
crates/gmod-api-db/fixtures/: minimal_gmod_api.json
crates/gmod-api-db/src/: lib.rs
crates/lux-lsp/: Cargo.toml
crates/lux-lsp/src/: main.rs  server.rs
docs/en/: architecture.md  document-hover.md  gmod-api-db.md  roadmap.md  vscode-experience.md
docs/zh-CN/: architecture.md  document-hover.md  gmod-api-db.md  roadmap.md  vscode-experience.md
tools/gmod-api-update/: Cargo.toml
tools/gmod-api-update/src/: lib.rs  main.rs
vscode-lux/: .vscodeignore  LICENSE  README.md  language-configuration.json  package-lock.json  package.json
vscode-lux/snippets/: lux.json
vscode-lux/src/: extension.ts
vscode-lux/syntaxes/: lux.tmLanguage.json
