[workspace]
members = ["crates/lux-lsp"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/TimeWatcher/lux-lsp"

[workspace.dependencies]
luxc = { path = "../compiler" }
lsp-server = "0.7"
lsp-types = "0.97"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
