[workspace]
members = ["crates/gmod-api-db", "crates/lux-lsp", "tools/gmod-api-update"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/TimeWatcher/lux-lsp"

[workspace.dependencies]
crossbeam-channel = "0.5"
gmod-api-db = { path = "crates/gmod-api-db" }
luxc = { path = "../compiler" }
lsp-server = "0.7"
lsp-types = "0.97"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
