[workspace]
members = ["crates/gmod-api-db", "tools/gmod-api-update"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/TimeWatcher/lux-lsp"

[workspace.dependencies]
gmod-api-db = { path = "crates/gmod-api-db" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
