[package]
name = "lux-lsp"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
crossbeam-channel.workspace = true
gmod-api-db.workspace = true
luxc.workspace = true
lsp-server.workspace = true
lsp-types.workspace = true
serde.workspace = true
serde_json.workspace = true
url.workspace = true
